@@ -136,13 +136,13 @@
 <tr class="row-even"><td><p><strong>CH4_column_volume_mixing_ratio</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
-<td><p>[ppmv]</p></td>
+<td><p>[ppbv]</p></td>
 <td><p>CH4 column volume mixing ratio</p></td>
 </tr>
 <tr class="row-odd"><td><p><strong>CH4_column_volume_mixing_ratio_uncertainty</strong></p></td>
 <td><p>double</p></td>
 <td><p>{<em>time</em>}</p></td>
-<td><p>[ppmv]</p></td>
+<td><p>[ppbv]</p></td>
 <td><p>CH4 column volume mixing ratio uncertainty</p></td>
 </tr>
 <tr class="row-even"><td><p><strong>CO2_column_volume_mixing_ratio</strong></p></td>
